--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,23 +1,24 @@
 security:
+    
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
-        in_database: 
-            entity:
-                class: App\Entity\User
-                property: name
-        # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
-            id: App\Security\UserProvider
-
-
-        backend_users:
-            memory:
+        users_in_memory:
+            memory: 
                 users:
                     admin: {password: 'password', roles: ['ROLE_ADMIN'] }
+
+        # used to reload user from session & other features (e.g. switch_user)
+        # app_user_provider:
+            # id: App\Security\UserProvider
+
+
+   
+                
     encoders:
+        Symfony\Component\Security\Core\User\User: 'auto'
         App\Security\User:
             algorithm: auto
+    
 
 
    # - Create a way to authenticate! See https://symfony.com/doc/current/security.html
@@ -29,6 +30,13 @@ security:
             anonymous: true
             lazy: true
             provider: users_in_memory
+            guard:
+                authenticators:
+                    - App\Security\AdminAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: home
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -39,5 +47,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
